y.output
State 0 conflicts: 21 shift/reduce, 1 reduce/reduce
State 4 conflicts: 14 shift/reduce
State 5 conflicts: 14 shift/reduce
State 9 conflicts: 12 shift/reduce
State 10 conflicts: 12 shift/reduce
State 13 conflicts: 3 shift/reduce
State 15 conflicts: 3 shift/reduce
State 17 conflicts: 6 shift/reduce
State 19 conflicts: 12 shift/reduce
State 23 conflicts: 21 shift/reduce, 1 reduce/reduce
State 37 conflicts: 18 shift/reduce
State 38 conflicts: 14 shift/reduce
State 40 conflicts: 14 shift/reduce
State 41 conflicts: 2 shift/reduce
State 42 conflicts: 3 shift/reduce
State 45 conflicts: 1 shift/reduce
State 47 conflicts: 3 shift/reduce
State 48 conflicts: 1 shift/reduce
State 59 conflicts: 18 shift/reduce
State 64 conflicts: 18 shift/reduce
State 68 conflicts: 1 reduce/reduce
State 69 conflicts: 1 reduce/reduce
State 70 conflicts: 1 reduce/reduce
State 71 conflicts: 1 reduce/reduce
State 72 conflicts: 2 shift/reduce
State 77 conflicts: 3 shift/reduce
State 78 conflicts: 1 shift/reduce
State 94 conflicts: 21 shift/reduce, 1 reduce/reduce
State 98 conflicts: 21 shift/reduce, 2 reduce/reduce
State 101 conflicts: 14 shift/reduce, 30 reduce/reduce
State 102 conflicts: 14 shift/reduce, 30 reduce/reduce
State 103 conflicts: 14 shift/reduce, 30 reduce/reduce
State 104 conflicts: 14 shift/reduce, 30 reduce/reduce
State 105 conflicts: 14 shift/reduce, 30 reduce/reduce
State 106 conflicts: 14 shift/reduce, 30 reduce/reduce
State 115 conflicts: 2 shift/reduce
State 116 conflicts: 18 shift/reduce
State 117 conflicts: 18 shift/reduce
State 123 conflicts: 14 shift/reduce
State 139 conflicts: 12 shift/reduce
State 140 conflicts: 12 shift/reduce
State 169 conflicts: 12 shift/reduce
State 173 conflicts: 14 shift/reduce
State 175 conflicts: 30 reduce/reduce
State 177 conflicts: 18 shift/reduce
State 178 conflicts: 30 reduce/reduce
State 179 conflicts: 30 reduce/reduce
State 180 conflicts: 30 reduce/reduce
State 181 conflicts: 30 reduce/reduce
State 182 conflicts: 30 reduce/reduce
State 189 conflicts: 2 shift/reduce
State 190 conflicts: 2 shift/reduce
State 191 conflicts: 2 shift/reduce
State 192 conflicts: 2 shift/reduce
State 193 conflicts: 2 shift/reduce
State 194 conflicts: 2 shift/reduce
State 195 conflicts: 3 shift/reduce
State 196 conflicts: 3 shift/reduce
State 200 conflicts: 18 shift/reduce
State 226 conflicts: 21 shift/reduce, 1 reduce/reduce
State 228 conflicts: 21 shift/reduce, 1 reduce/reduce
State 229 conflicts: 21 shift/reduce, 1 reduce/reduce
State 233 conflicts: 18 shift/reduce
State 246 conflicts: 12 shift/reduce
State 256 conflicts: 12 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: stmt stmts
    2        | %empty

    3 stmts: stmt stmts
    4      | %empty

    5 stmt: declaration
    6     | print_stmt
    7     | error_stmt
    8     | if_stmt
    9     | for_stmt
   10     | pure_arithmetic
   11     | incdec_stmt
   12     | arithmetic_add_stmt
   13     | expression_stmt
   14     | block
   15     | NEWLINE

   16 declaration: VAR ID INT literal_initial NEWLINE
   17            | VAR ID STRING string_initial
   18            | VAR ID FLOAT literal_initial NEWLINE
   19            | VAR ID BOOL bool_initial NEWLINE
   20            | VAR ID '[' INT_LIT ']' INT NEWLINE
   21            | VAR ID '[' INT_LIT ']' FLOAT NEWLINE

   22 $@1: %empty

   23 declaration: ID '[' INT_LIT $@1 ']' array_initial NEWLINE
   24            | ident assign NEWLINE

   25 array_initial: assign
   26              | %empty

   27 bool_initial: '=' bool
   28             | %empty

   29 literal_initial: '=' literal
   30                | %empty

   31 string_initial: '=' '"' STRING_LIT '"' NEWLINE
   32               | NEWLINE

   33 incdec_stmt: ident INC
   34            | ident DEC

   35 $@2: %empty

   36 print_stmt: PRINTLN $@2 '(' expression ')'

   37 $@3: %empty

   38 print_stmt: PRINT $@3 '(' expression ')'

   39 pure_arithmetic: int_literal '+' int_literal
   40                | int_literal '-' int_literal
   41                | FLOAT_LIT '+' FLOAT_LIT
   42                | FLOAT_LIT '-' FLOAT_LIT
   43                | ID '+' INT_LIT
   44                | invalid_arithmetic

   45 invalid_arithmetic: INT_LIT '+' FLOAT_LIT
   46                   | FLOAT_LIT '+' INT_LIT
   47                   | INT_LIT '-' FLOAT_LIT
   48                   | FLOAT_LIT '-' INT_LIT
   49                   | INT_LIT '*' FLOAT_LIT
   50                   | FLOAT_LIT '*' INT_LIT
   51                   | ID '%' INT_LIT
   52                   | int_literal LAND bool
   53                   | float_literal LAND bool
   54                   | bool LOR expression

   55 $@4: %empty

   56 if_stmt: IF int_literal $@4 block

   57 $@5: %empty

   58 if_stmt: IF float_literal $@5 block

   59 $@6: %empty

   60 if_stmt: IF string_literal $@6 block

   61 $@7: %empty

   62 if_stmt: IF id_term $@7 block
   63        | IF expression block else_stmt

   64 else_stmt: ELSE if_stmt
   65          | ELSE block
   66          | %empty

   67 $@8: %empty

   68 for_stmt: FOR float_literal '{' $@8 stmts '}'

   69 $@9: %empty

   70 for_stmt: FOR int_literal '{' $@9 stmts '}'

   71 $@10: %empty

   72 for_stmt: FOR pure_arithmetic '{' $@10 stmts '}'
   73         | FOR for_expr block

   74 for_expr: ident assign ';' ident comparsion_expression ';' arithmetic_add_stmt
   75         | ident assign ';' ident comparsion_expression ';' incdec_stmt
   76         | expression

   77 assign: ADD_ASSIGN var
   78       | SUB_ASSIGN var
   79       | MUL_ASSIGN var
   80       | QUO_ASSIGN var
   81       | REM_ASSIGN var
   82       | error_assign

   83 error_assign: '=' var
   84             | ADD_ASSIGN ID

   85 error_stmt: literal assign

   86 var: int_literal
   87    | float_literal
   88    | string_literal
   89    | bool
   90    | expression
   91    | ID
   92    | %empty

   93 ident: ID

   94 $@11: %empty

   95 block: '{' $@11 stmts '}'

   96 arithmetic_add_stmt: ID '+' ID
   97                    | ID '-' ID
   98                    | arithmetic_mul_stmt

   99 arithmetic_mul_stmt: ID '*' ID
  100                    | ID '/' ID
  101                    | ID '%' ID

  102 expression_stmt: expression

  103 expression: comparsion_expression expression
  104           | lor_expression expression
  105           | add_expression
  106           | %empty

  107 lor_expression: land_expression
  108               | LOR expression

  109 land_expression: LAND expression

  110 comparsion_expression: expression '>' add_expression
  111                      | expression '<' add_expression
  112                      | expression GEQ add_expression
  113                      | expression LEQ add_expression
  114                      | expression EQL add_expression
  115                      | expression NEQ add_expression
  116                      | expression add_expression

  117 add_expression: add_expression '+' mul_expression
  118               | add_expression '-' mul_expression
  119               | mul_expression

  120 mul_expression: mul_expression '*' operand
  121               | mul_expression '/' operand
  122               | mul_expression '%' operand
  123               | operand

  124 operand: '(' expression ')'
  125        | term

  126 term: literal
  127     | sign_literal
  128     | literal_convert
  129     | string_literal
  130     | bool
  131     | id_term

  132 $@12: %empty

  133 bool: '!' bool $@12 expression
  134     | TRUE
  135     | FALSE

  136 literal: int_literal
  137        | float_literal

  138 int_literal: INT_LIT

  139 float_literal: FLOAT_LIT

  140 sign_literal: SIGN_INT_LIT
  141             | SIGN_FLOAT_LIT

  142 string_literal: '"' STRING_LIT '"'

  143 literal_convert: INT '(' ident ')'
  144                | INT '(' FLOAT_LIT ')'
  145                | FLOAT '(' ident ')'
  146                | FLOAT '(' INT_LIT ')'

  147 $@13: %empty

  148 id_term: ID $@13 '[' expression ']'
  149        | ID


Terminals, with rules where they appear

$end (0) 0
'!' (33) 133
'"' (34) 31 142
'%' (37) 51 101 122
'(' (40) 36 38 124 143 144 145 146
')' (41) 36 38 124 143 144 145 146
'*' (42) 49 50 99 120
'+' (43) 39 41 43 45 46 96 117
'-' (45) 40 42 47 48 97 118
'/' (47) 100 121
';' (59) 74 75
'<' (60) 111
'=' (61) 27 29 31 83
'>' (62) 110
'[' (91) 20 21 23 148
']' (93) 20 21 23 148
'{' (123) 68 70 72 95
'}' (125) 68 70 72 95
error (256)
VAR (258) 16 17 18 19 20 21
INT (259) 16 20 143 144
FLOAT (260) 18 21 145 146
BOOL (261) 19
STRING (262) 17
INC (263) 33
DEC (264) 34
GEQ (265) 112
LEQ (266) 113
EQL (267) 114
NEQ (268) 115
ADD_ASSIGN (269) 77 84
SUB_ASSIGN (270) 78
MUL_ASSIGN (271) 79
QUO_ASSIGN (272) 80
REM_ASSIGN (273) 81
LAND (274) 52 53 109
LOR (275) 54 108
NEWLINE (276) 15 16 18 19 20 21 23 24 31 32
PRINT (277) 38
PRINTLN (278) 36
IF (279) 56 58 60 62 63
ELSE (280) 64 65
FOR (281) 68 70 72 73
TRUE (282) 134
FALSE (283) 135
INT_LIT (284) 20 21 23 43 45 46 47 48 49 50 51 138 146
SIGN_INT_LIT (285) 140
FLOAT_LIT (286) 41 42 45 46 47 48 49 50 139 144
SIGN_FLOAT_LIT (287) 141
STRING_LIT (288) 31 142
ID (289) 16 17 18 19 20 21 23 43 51 84 91 93 96 97 99 100 101 148 149


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
Program (53)
    on left: 1 2, on right: 0
stmts (54)
    on left: 3 4, on right: 1 3 68 70 72 95
stmt (55)
    on left: 5 6 7 8 9 10 11 12 13 14 15, on right: 1 3
declaration (56)
    on left: 16 17 18 19 20 21 23 24, on right: 5
$@1 (57)
    on left: 22, on right: 23
array_initial (58)
    on left: 25 26, on right: 23
bool_initial (59)
    on left: 27 28, on right: 19
literal_initial (60)
    on left: 29 30, on right: 16 18
string_initial (61)
    on left: 31 32, on right: 17
incdec_stmt (62)
    on left: 33 34, on right: 11 75
print_stmt (63)
    on left: 36 38, on right: 6
$@2 (64)
    on left: 35, on right: 36
$@3 (65)
    on left: 37, on right: 38
pure_arithmetic (66)
    on left: 39 40 41 42 43 44, on right: 10 72
invalid_arithmetic (67)
    on left: 45 46 47 48 49 50 51 52 53 54, on right: 44
if_stmt (68)
    on left: 56 58 60 62 63, on right: 8 64
$@4 (69)
    on left: 55, on right: 56
$@5 (70)
    on left: 57, on right: 58
$@6 (71)
    on left: 59, on right: 60
$@7 (72)
    on left: 61, on right: 62
else_stmt (73)
    on left: 64 65 66, on right: 63
for_stmt (74)
    on left: 68 70 72 73, on right: 9
$@8 (75)
    on left: 67, on right: 68
$@9 (76)
    on left: 69, on right: 70
$@10 (77)
    on left: 71, on right: 72
for_expr (78)
    on left: 74 75 76, on right: 73
assign (79)
    on left: 77 78 79 80 81 82, on right: 24 25 74 75 85
error_assign (80)
    on left: 83 84, on right: 82
error_stmt (81)
    on left: 85, on right: 7
var (82)
    on left: 86 87 88 89 90 91 92, on right: 77 78 79 80 81 83
ident (83)
    on left: 93, on right: 24 33 34 74 75 143 145
block (84)
    on left: 95, on right: 14 56 58 60 62 63 65 73
$@11 (85)
    on left: 94, on right: 95
arithmetic_add_stmt (86)
    on left: 96 97 98, on right: 12 74
arithmetic_mul_stmt (87)
    on left: 99 100 101, on right: 98
expression_stmt (88)
    on left: 102, on right: 13
expression (89)
    on left: 103 104 105 106, on right: 36 38 54 63 76 90 102 103 104
    108 109 110 111 112 113 114 115 116 124 133 148
lor_expression (90)
    on left: 107 108, on right: 104
land_expression (91)
    on left: 109, on right: 107
comparsion_expression (92)
    on left: 110 111 112 113 114 115 116, on right: 74 75 103
add_expression (93)
    on left: 117 118 119, on right: 105 110 111 112 113 114 115 116
    117 118
mul_expression (94)
    on left: 120 121 122 123, on right: 117 118 119 120 121 122
operand (95)
    on left: 124 125, on right: 120 121 122 123
term (96)
    on left: 126 127 128 129 130 131, on right: 125
bool (97)
    on left: 133 134 135, on right: 27 52 53 54 89 130 133
$@12 (98)
    on left: 132, on right: 133
literal (99)
    on left: 136 137, on right: 29 85 126
int_literal (100)
    on left: 138, on right: 39 40 52 56 70 86 136
float_literal (101)
    on left: 139, on right: 53 58 68 87 137
sign_literal (102)
    on left: 140 141, on right: 127
string_literal (103)
    on left: 142, on right: 60 88 129
literal_convert (104)
    on left: 143 144 145 146, on right: 128
id_term (105)
    on left: 148 149, on right: 62 131
$@13 (106)
    on left: 147, on right: 148


State 0

    0 $accept: . Program $end

    VAR             shift, and go to state 1
    INT             shift, and go to state 2
    FLOAT           shift, and go to state 3
    LAND            shift, and go to state 4
    LOR             shift, and go to state 5
    NEWLINE         shift, and go to state 6
    PRINT           shift, and go to state 7
    PRINTLN         shift, and go to state 8
    IF              shift, and go to state 9
    FOR             shift, and go to state 10
    TRUE            shift, and go to state 11
    FALSE           shift, and go to state 12
    INT_LIT         shift, and go to state 13
    SIGN_INT_LIT    shift, and go to state 14
    FLOAT_LIT       shift, and go to state 15
    SIGN_FLOAT_LIT  shift, and go to state 16
    ID              shift, and go to state 17
    '"'             shift, and go to state 18
    '('             shift, and go to state 19
    '{'             shift, and go to state 20
    '!'             shift, and go to state 21

    $end            reduce using rule 2 (Program)
    $end            [reduce using rule 106 (expression)]
    VAR             [reduce using rule 106 (expression)]
    INT             [reduce using rule 106 (expression)]
    FLOAT           [reduce using rule 106 (expression)]
    LAND            [reduce using rule 106 (expression)]
    LOR             [reduce using rule 106 (expression)]
    NEWLINE         [reduce using rule 106 (expression)]
    PRINT           [reduce using rule 106 (expression)]
    PRINTLN         [reduce using rule 106 (expression)]
    IF              [reduce using rule 106 (expression)]
    FOR             [reduce using rule 106 (expression)]
    TRUE            [reduce using rule 106 (expression)]
    FALSE           [reduce using rule 106 (expression)]
    INT_LIT         [reduce using rule 106 (expression)]
    SIGN_INT_LIT    [reduce using rule 106 (expression)]
    FLOAT_LIT       [reduce using rule 106 (expression)]
    SIGN_FLOAT_LIT  [reduce using rule 106 (expression)]
    ID              [reduce using rule 106 (expression)]
    '"'             [reduce using rule 106 (expression)]
    '('             [reduce using rule 106 (expression)]
    '{'             [reduce using rule 106 (expression)]
    '!'             [reduce using rule 106 (expression)]
    $default        reduce using rule 106 (expression)

    Program                go to state 22
    stmt                   go to state 23
    declaration            go to state 24
    incdec_stmt            go to state 25
    print_stmt             go to state 26
    pure_arithmetic        go to state 27
    invalid_arithmetic     go to state 28
    if_stmt                go to state 29
    for_stmt               go to state 30
    error_stmt             go to state 31
    ident                  go to state 32
    block                  go to state 33
    arithmetic_add_stmt    go to state 34
    arithmetic_mul_stmt    go to state 35
    expression_stmt        go to state 36
    expression             go to state 37
    lor_expression         go to state 38
    land_expression        go to state 39
    comparsion_expression  go to state 40
    add_expression         go to state 41
    mul_expression         go to state 42
    operand                go to state 43
    term                   go to state 44
    bool                   go to state 45
    literal                go to state 46
    int_literal            go to state 47
    float_literal          go to state 48
    sign_literal           go to state 49
    string_literal         go to state 50
    literal_convert        go to state 51
    id_term                go to state 52


State 1

   16 declaration: VAR . ID INT literal_initial NEWLINE
   17            | VAR . ID STRING string_initial
   18            | VAR . ID FLOAT literal_initial NEWLINE
   19            | VAR . ID BOOL bool_initial NEWLINE
   20            | VAR . ID '[' INT_LIT ']' INT NEWLINE
   21            | VAR . ID '[' INT_LIT ']' FLOAT NEWLINE

    ID  shift, and go to state 53


State 2

  143 literal_convert: INT . '(' ident ')'
  144                | INT . '(' FLOAT_LIT ')'

    '('  shift, and go to state 54


State 3

  145 literal_convert: FLOAT . '(' ident ')'
  146                | FLOAT . '(' INT_LIT ')'

    '('  shift, and go to state 55


State 4

  109 land_expression: LAND . expression

    INT             shift, and go to state 2
    FLOAT           shift, and go to state 3
    LAND            shift, and go to state 4
    LOR             shift, and go to state 5
    TRUE            shift, and go to state 11
    FALSE           shift, and go to state 12
    INT_LIT         shift, and go to state 56
    SIGN_INT_LIT    shift, and go to state 14
    FLOAT_LIT       shift, and go to state 57
    SIGN_FLOAT_LIT  shift, and go to state 16
    ID              shift, and go to state 58
    '"'             shift, and go to state 18
    '('             shift, and go to state 19
    '!'             shift, and go to state 21

    INT             [reduce using rule 106 (expression)]
    FLOAT           [reduce using rule 106 (expression)]
    LAND            [reduce using rule 106 (expression)]
    LOR             [reduce using rule 106 (expression)]
    TRUE            [reduce using rule 106 (expression)]
    FALSE           [reduce using rule 106 (expression)]
    INT_LIT         [reduce using rule 106 (expression)]
    SIGN_INT_LIT    [reduce using rule 106 (expression)]
    FLOAT_LIT       [reduce using rule 106 (expression)]
    SIGN_FLOAT_LIT  [reduce using rule 106 (expression)]
    ID              [reduce using rule 106 (expression)]
    '"'             [reduce using rule 106 (expression)]
    '('             [reduce using rule 106 (expression)]
    '!'             [reduce using rule 106 (expression)]
    $default        reduce using rule 106 (expression)

    expression             go to state 59
    lor_expression         go to state 38
    land_expression        go to state 39
    comparsion_expression  go to state 40
    add_expression         go to state 41
    mul_expression         go to state 42
    operand                go to state 43
    term                   go to state 44
    bool                   go to state 60
    literal                go to state 61
    int_literal            go to state 62
    float_literal          go to state 63
    sign_literal           go to state 49
    string_literal         go to state 50
    literal_convert        go to state 51
    id_term                go to state 52


State 5

  108 lor_expression: LOR . expression

    INT             shift, and go to state 2
    FLOAT           shift, and go to state 3
    LAND            shift, and go to state 4
    LOR             shift, and go to state 5
    TRUE            shift, and go to state 11
    FALSE           shift, and go to state 12
    INT_LIT         shift, and go to state 56
    SIGN_INT_LIT    shift, and go to state 14
    FLOAT_LIT       shift, and go to state 57
    SIGN_FLOAT_LIT  shift, and go to state 16
    ID              shift, and go to state 58
    '"'             shift, and go to state 18
    '('             shift, and go to state 19
    '!'             shift, and go to state 21

    INT             [reduce using rule 106 (expression)]
    FLOAT           [reduce using rule 106 (expression)]
    LAND            [reduce using rule 106 (expression)]
    LOR             [reduce using rule 106 (expression)]
    TRUE            [reduce using rule 106 (expression)]
    FALSE           [reduce using rule 106 (expression)]
    INT_LIT         [reduce using rule 106 (expression)]
    SIGN_INT_LIT    [reduce using rule 106 (expression)]
    FLOAT_LIT       [reduce using rule 106 (expression)]
    SIGN_FLOAT_LIT  [reduce using rule 106 (expression)]
    ID              [reduce using rule 106 (expression)]
    '"'             [reduce using rule 106 (expression)]
    '('             [reduce using rule 106 (expression)]
    '!'             [reduce using rule 106 (expression)]
    $default        reduce using rule 106 (expression)

    expression             go to state 64
    lor_expression         go to state 38
    land_expression        go to state 39
    comparsion_expression  go to state 40
    add_expression         go to state 41
    mul_expression         go to state 42
    operand                go to state 43
    term                   go to state 44
    bool                   go to state 60
    literal                go to state 61
    int_literal            go to state 62
    float_literal          go to state 63
    sign_literal           go to state 49
    string_literal         go to state 50
    literal_convert        go to state 51
    id_term                go to state 52


State 6

   15 stmt: NEWLINE .

    $default  reduce using rule 15 (stmt)


State 7

   38 print_stmt: PRINT . $@3 '(' expression ')'

    $default  reduce using rule 37 ($@3)

    $@3  go to state 65


State 8

   36 print_stmt: PRINTLN . $@2 '(' expression ')'

    $default  reduce using rule 35 ($@2)

    $@2  go to state 66


State 9

   56 if_stmt: IF . int_literal $@4 block
   58        | IF . float_literal $@5 block
   60        | IF . string_literal $@6 block
   62        | IF . id_term $@7 block
   63        | IF . expression block else_stmt

    INT             shift, and go to state 2
    FLOAT           shift, and go to state 3
    LAND            shift, and go to state 4
    LOR             shift, and go to state 5
    TRUE            shift, and go to state 11
    FALSE           shift, and go to state 12
    INT_LIT         shift, and go to state 56
    SIGN_INT_LIT    shift, and go to state 14
    FLOAT_LIT       shift, and go to state 57
    SIGN_FLOAT_LIT  shift, and go to state 16
    ID              shift, and go to state 58
    '"'             shift, and go to state 18
    '('             shift, and go to state 19
    '!'             shift, and go to state 21

    INT             [reduce using rule 106 (expression)]
    FLOAT           [reduce using rule 106 (expression)]
    TRUE            [reduce using rule 106 (expression)]
    FALSE           [reduce using rule 106 (expression)]
    INT_LIT         [reduce using rule 106 (expression)]
    SIGN_INT_LIT    [reduce using rule 106 (expression)]
    FLOAT_LIT       [reduce using rule 106 (expression)]
    SIGN_FLOAT_LIT  [reduce using rule 106 (expression)]
    ID              [reduce using rule 106 (expression)]
    '"'             [reduce using rule 106 (expression)]
    '('             [reduce using rule 106 (expression)]
    '!'             [reduce using rule 106 (expression)]
    $default        reduce using rule 106 (expression)

    expression             go to state 67
    lor_expression         go to state 38
    land_expression        go to state 39
    comparsion_expression  go to state 40
    add_expression         go to state 41
    mul_expression         go to state 42
    operand                go to state 43
    term                   go to state 44
    bool                   go to state 60
    literal                go to state 61
    int_literal            go to state 68
    float_literal          go to state 69
    sign_literal           go to state 49
    string_literal         go to state 70
    literal_convert        go to state 51
    id_term                go to state 71


State 10

   68 for_stmt: FOR . float_literal '{' $@8 stmts '}'
   70         | FOR . int_literal '{' $@9 stmts '}'
   72         | FOR . pure_arithmetic '{' $@10 stmts '}'
   73         | FOR . for_expr block

    INT             shift, and go to state 2
    FLOAT           shift, and go to state 3
    LAND            shift, and go to state 4
    LOR             shift, and go to state 5
    TRUE            shift, and go to state 11
    FALSE           shift, and go to state 12
    INT_LIT         shift, and go to state 13
    SIGN_INT_LIT    shift, and go to state 14
    FLOAT_LIT       shift, and go to state 15
    SIGN_FLOAT_LIT  shift, and go to state 16
    ID              shift, and go to state 72
    '"'             shift, and go to state 18
    '('             shift, and go to state 19
    '!'             shift, and go to state 21

    INT             [reduce using rule 106 (expression)]
    FLOAT           [reduce using rule 106 (expression)]
    TRUE            [reduce using rule 106 (expression)]
    FALSE           [reduce using rule 106 (expression)]
    INT_LIT         [reduce using rule 106 (expression)]
    SIGN_INT_LIT    [reduce using rule 106 (expression)]
    FLOAT_LIT       [reduce using rule 106 (expression)]
    SIGN_FLOAT_LIT  [reduce using rule 106 (expression)]
    ID              [reduce using rule 106 (expression)]
    '"'             [reduce using rule 106 (expression)]
    '('             [reduce using rule 106 (expression)]
    '!'             [reduce using rule 106 (expression)]
    $default        reduce using rule 106 (expression)

    pure_arithmetic        go to state 73
    invalid_arithmetic     go to state 28
    for_expr               go to state 74
    ident                  go to state 75
    expression             go to state 76
    lor_expression         go to state 38
    land_expression        go to state 39
    comparsion_expression  go to state 40
    add_expression         go to state 41
    mul_expression         go to state 42
    operand                go to state 43
    term                   go to state 44
    bool                   go to state 45
    literal                go to state 61
    int_literal            go to state 77
    float_literal          go to state 78
    sign_literal           go to state 49
    string_literal         go to state 50
    literal_convert        go to state 51
    id_term                go to state 52


State 11

  134 bool: TRUE .

    $default  reduce using rule 134 (bool)


State 12

  135 bool: FALSE .

    $default  reduce using rule 135 (bool)


State 13

   45 invalid_arithmetic: INT_LIT . '+' FLOAT_LIT
   47                   | INT_LIT . '-' FLOAT_LIT
   49                   | INT_LIT . '*' FLOAT_LIT
  138 int_literal: INT_LIT .

    '+'  shift, and go to state 79
    '-'  shift, and go to state 80
    '*'  shift, and go to state 81

    '+'       [reduce using rule 138 (int_literal)]
    '-'       [reduce using rule 138 (int_literal)]
    '*'       [reduce using rule 138 (int_literal)]
    $default  reduce using rule 138 (int_literal)


State 14

  140 sign_literal: SIGN_INT_LIT .

    $default  reduce using rule 140 (sign_literal)


State 15

   41 pure_arithmetic: FLOAT_LIT . '+' FLOAT_LIT
   42                | FLOAT_LIT . '-' FLOAT_LIT
   46 invalid_arithmetic: FLOAT_LIT . '+' INT_LIT
   48                   | FLOAT_LIT . '-' INT_LIT
   50                   | FLOAT_LIT . '*' INT_LIT
  139 float_literal: FLOAT_LIT .

    '+'  shift, and go to state 82
    '-'  shift, and go to state 83
    '*'  shift, and go to state 84

    '+'       [reduce using rule 139 (float_literal)]
    '-'       [reduce using rule 139 (float_literal)]
    '*'       [reduce using rule 139 (float_literal)]
    $default  reduce using rule 139 (float_literal)


State 16

  141 sign_literal: SIGN_FLOAT_LIT .

    $default  reduce using rule 141 (sign_literal)


State 17

   23 declaration: ID . '[' INT_LIT $@1 ']' array_initial NEWLINE
   43 pure_arithmetic: ID . '+' INT_LIT
   51 invalid_arithmetic: ID . '%' INT_LIT
   93 ident: ID .
   96 arithmetic_add_stmt: ID . '+' ID
   97                    | ID . '-' ID
   99 arithmetic_mul_stmt: ID . '*' ID
  100                    | ID . '/' ID
  101                    | ID . '%' ID
  148 id_term: ID . $@13 '[' expression ']'
  149        | ID .

    '['  shift, and go to state 85
    '+'  shift, and go to state 86
    '-'  shift, and go to state 87
    '*'  shift, and go to state 88
    '%'  shift, and go to state 89
    '/'  shift, and go to state 90

    INC         reduce using rule 93 (ident)
    DEC         reduce using rule 93 (ident)
    ADD_ASSIGN  reduce using rule 93 (ident)
    SUB_ASSIGN  reduce using rule 93 (ident)
    MUL_ASSIGN  reduce using rule 93 (ident)
    QUO_ASSIGN  reduce using rule 93 (ident)
    REM_ASSIGN  reduce using rule 93 (ident)
    '['         [reduce using rule 147 ($@13)]
    '='         reduce using rule 93 (ident)
    '+'         [reduce using rule 149 (id_term)]
    '-'         [reduce using rule 149 (id_term)]
    '*'         [reduce using rule 149 (id_term)]
    '%'         [reduce using rule 149 (id_term)]
    '/'         [reduce using rule 149 (id_term)]
    $default    reduce using rule 149 (id_term)

    $@13  go to state 91


State 18

  142 string_literal: '"' . STRING_LIT '"'

    STRING_LIT  shift, and go to state 92


State 19

  124 operand: '(' . expression ')'

    INT             shift, and go to state 2
    FLOAT           shift, and go to state 3
    LAND            shift, and go to state 4
    LOR             shift, and go to state 5
    TRUE            shift, and go to state 11
    FALSE           shift, and go to state 12
    INT_LIT         shift, and go to state 56
    SIGN_INT_LIT    shift, and go to state 14
    FLOAT_LIT       shift, and go to state 57
    SIGN_FLOAT_LIT  shift, and go to state 16
    ID              shift, and go to state 58
    '"'             shift, and go to state 18
    '('             shift, and go to state 19
    '!'             shift, and go to state 21

    INT             [reduce using rule 106 (expression)]
    FLOAT           [reduce using rule 106 (expression)]
    TRUE            [reduce using rule 106 (expression)]
    FALSE           [reduce using rule 106 (expression)]
    INT_LIT         [reduce using rule 106 (expression)]
    SIGN_INT_LIT    [reduce using rule 106 (expression)]
    FLOAT_LIT       [reduce using rule 106 (expression)]
    SIGN_FLOAT_LIT  [reduce using rule 106 (expression)]
    ID              [reduce using rule 106 (expression)]
    '"'             [reduce using rule 106 (expression)]
    '('             [reduce using rule 106 (expression)]
    '!'             [reduce using rule 106 (expression)]
    $default        reduce using rule 106 (expression)

    expression             go to state 93
    lor_expression         go to state 38
    land_expression        go to state 39
    comparsion_expression  go to state 40
    add_expression         go to state 41
    mul_expression         go to state 42
    operand                go to state 43
    term                   go to state 44
    bool                   go to state 60
    literal                go to state 61
    int_literal            go to state 62
    float_literal          go to state 63
    sign_literal           go to state 49
    string_literal         go to state 50
    literal_convert        go to state 51
    id_term                go to state 52


State 20

   95 block: '{' . $@11 stmts '}'

    $default  reduce using rule 94 ($@11)

    $@11  go to state 94


State 21

  133 bool: '!' . bool $@12 expression

    TRUE   shift, and go to state 11
    FALSE  shift, and go to state 12
    '!'    shift, and go to state 21

    bool  go to state 95


State 22

    0 $accept: Program . $end

    $end  shift, and go to state 96


State 23

    1 Program: stmt . stmts

    VAR             shift, and go to state 1
    INT             shift, and go to state 2
    FLOAT           shift, and go to state 3
    LAND            shift, and go to state 4
    LOR             shift, and go to state 5
    NEWLINE         shift, and go to state 6
    PRINT           shift, and go to state 7
    PRINTLN         shift, and go to state 8
    IF              shift, and go to state 9
    FOR             shift, and go to state 10
    TRUE            shift, and go to state 11
    FALSE           shift, and go to state 12
    INT_LIT         shift, and go to state 13
    SIGN_INT_LIT    shift, and go to state 14
    FLOAT_LIT       shift, and go to state 15
    SIGN_FLOAT_LIT  shift, and go to state 16
    ID              shift, and go to state 17
    '"'             shift, and go to state 18
    '('             shift, and go to state 19
    '{'             shift, and go to state 20
    '!'             shift, and go to state 21

    $end            reduce using rule 4 (stmts)
    $end            [reduce using rule 106 (expression)]
    VAR             [reduce using rule 106 (expression)]
    INT             [reduce using rule 106 (expression)]
    FLOAT           [reduce using rule 106 (expression)]
    LAND            [reduce using rule 106 (expression)]
    LOR             [reduce using rule 106 (expression)]
    NEWLINE         [reduce using rule 106 (expression)]
    PRINT           [reduce using rule 106 (expression)]
    PRINTLN         [reduce using rule 106 (expression)]
    IF              [reduce using rule 106 (expression)]
    FOR             [reduce using rule 106 (expression)]
    TRUE            [reduce using rule 106 (expression)]
    FALSE           [reduce using rule 106 (expression)]
    INT_LIT         [reduce using rule 106 (expression)]
    SIGN_INT_LIT    [reduce using rule 106 (expression)]
    FLOAT_LIT       [reduce using rule 106 (expression)]
    SIGN_FLOAT_LIT  [reduce using rule 106 (expression)]
    ID              [reduce using rule 106 (expression)]
    '"'             [reduce using rule 106 (expression)]
    '('             [reduce using rule 106 (expression)]
    '{'             [reduce using rule 106 (expression)]
    '!'             [reduce using rule 106 (expression)]
    $default        reduce using rule 106 (expression)
